--- a/web/src/app/inventory/supplier/supplier.component.css
+++ b/web/src/app/inventory/supplier/supplier.component.css
@@ -3,4 +3,13 @@
 
 /* model popup width and height clsaa end */
 
+.mat-icon {
+    pointer-events: none;
+  }
 
+.bg-none{
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    padding: 0;
+    height: 35px;
+  }
