--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -38,11 +38,15 @@
                                         id="form1" class="form-control" />
                                 </div>
                             </div>
-                            <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
-                                <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
-                                    data-mdb-target="#exampleModal" (click)="openModal(content)"> add</mat-icon>
-                                <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View"
+                            <div class="col-md-1 col-1 d-flex" style="width: 70px;padding: 0;">
+                                <button class="bg-none" (click)="openModal(content)">
+                                    <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
+                                    data-mdb-target="#exampleModal" > add</mat-icon>
+                                </button>
+                                <button class="bg-none" (click)="gridview = !gridview">
+                                <mat-icon class="col-white Grid_icon"  title="Grid View"
                                     style="font-size: 22px;padding: 4px;">grid_on</mat-icon>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -60,10 +64,12 @@
                                     <p class="text-center m-0">{{data.Email}}</p>
                                     <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                                     <div class="text-center mb-3">
-                                        <mat-icon class="edit_icon ms-1" (click)="openModal(content)"
-                                            (click)="getSupplierById(data)">edit</mat-icon>
-                                        <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever
-                                        </mat-icon>
+                                        <button class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
+                                            <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal" data-mdb-target="#exampleModal" > edit</mat-icon>
+                                        </button>
+                                        <button class="bg-none" (click)="deleteItem(i)">
+                                            <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -94,12 +100,12 @@
                                 <tbody>
                                     <tr *ngFor="let data of dataList  let i = index;">
                                         <td style="width: 7%;">
-                                            <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal"
-                                                data-mdb-target="#exampleModal" (click)="openModal(content)"
-                                                (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
-                                                edit</mat-icon>
-                                            <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever
-                                            </mat-icon>
+                                            <button class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
+                                              <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal" data-mdb-target="#exampleModal" > edit</mat-icon>
+                                            </button>
+                                            <button class="bg-none" (click)="deleteItem(i)">
+                                              <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
+                                            </button>
                                         </td>
                                         <td class="text-center">{{ dataList.length - i }}</td>
                                         <td class="text-center">{{data.Name}}</td>
@@ -209,6 +215,16 @@
                                 <mat-error>
                                     GST No is required
                                 </mat-error>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 mb-0" >
+                            <mat-form-field class="example-full-width mb-0">
+                                <mat-label>TAX Type</mat-label>
+                                <mat-select name="GSTType" [(ngModel)]="data.GSTType" #GSTTypecontrol1 required>
+                                    <mat-option value="None">None</mat-option>
+                                    <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
+                                    </mat-option>
+                                </mat-select>
                             </mat-form-field>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 mb-0 ">
